test_yuriiq/catalog/language/russian/account/edit.php
<?php

// text
$_['text_account']	= 'Личный Кабинет';
$_['text_edit']	= 'Редактировать информацию';
$_['text_your_details']	= 'Ваша учетная запись';
$_['text_success']	= 'Ваша учетная запись была успешно обновлена!';

// error
$_['error_telephone']	= 'Номер телефона должен быть от 3 до 32 символов!';
$_['error_lastname']	= 'Фамилия должна быть от 1 до 32 символов!';
$_['error_exists']	= 'Такой E-Mail уже зарегистрирован!';
$_['error_firstname']	= 'Имя должно быть от 1 до 32 символов!';
$_['error_email']	= 'E-Mail адрес введен неверно!';

// entry
$_['entry_firstname']	= 'Имя, Отчество:';
$_['entry_fax']	= 'Факс:';
$_['entry_lastname']	= 'Фамилия:';
$_['entry_email']	= 'E-Mail:';
$_['entry_telephone']	= 'Телефон:';

// heading
$_['heading_title']	= 'Учетная запись';
?>